chore: add package templates

--- a/src/guppy_control/guppy_control_chassis/package.xml
+++ b/src/guppy_control/guppy_control_chassis/package.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>teleop_controller</name>
+  <name>guppy_control_chassis</name>
   <version>0.0.0</version>
-  <description>TODO: Package description</description>
-  <maintainer email="robosub@todo.todo">robosub</maintainer>
-  <license>Apache-2.0</license>
+  <description>ros2_control implementation of Guppy chassis, including thrust allocation and thruster inteface.</description>
+  <maintainer email="colewilson.main@gmail.com">Palouse RoboSub</maintainer>
+  <license>MIT</license>
+
+  <exec_depend>rclpy</exec_depend>
+  <exec_depend>std_msgs</exec_depend>
 
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
