--- a/src/guppy_teleop/package.xml
+++ b/src/guppy_teleop/package.xml
@@ -1,14 +1,11 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>chassis_control</name>
+  <name>guppy_teleop</name>
   <version>0.0.0</version>
-  <description>TODO: Package description</description>
-  <maintainer email="robosub@todo.todo">robosub</maintainer>
-  <license>MIT</license>
-
-  <exec_depend>rclpy</exec_depend>
-  <exec_depend>std_msgs</exec_depend>
+  <description>Remote/human operation code package for the 2026 Guppy AUV.</description>
+  <maintainer email="colewilson.main@gmail.com">Palouse RoboSub</maintainer>
+  <license>Apache-2.0</license>
 
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
