chore: update package descriptions to have correct names

--- a/src/guppy_teleop/setup.cfg
+++ b/src/guppy_teleop/setup.cfg
@@ -1,4 +1,4 @@
 [develop]
-script_dir=$base/lib/teleop_controller
+script_dir=$base/lib/guppy_teleop
 [install]
-install_scripts=$base/lib/teleop_controller
+install_scripts=$base/lib/guppy_teleop
