--- a/src/guppy_can/package.xml
+++ b/src/guppy_can/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>can_motor_control</name>
+  <name>guppy_can</name>
   <version>0.0.0</version>
   <description>Takes a float between -1 and 1, then publishes it over CAN.</description>
   <maintainer email="124544413+asorge29@users.noreply.github.com">asorge29</maintainer>
